# eve-fit-os

./: .env.example  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  efos.proto  efos_pb2.py  pyproject.toml  skills.json
data/: .gitignore
data/convert/: __main__.py  loader.py  paths.py
data/convert/impl/: categories.py  dbuffcollections.py  dogma_attributes.py  dogma_effects.py  groups.py  market_groups.py  type_dogma.py  types.py
data/convert/patches/: dogma_attributes.py  dogma_effects.py  loader.py  type_dogma.py
data/fsd-patches/: dbuffcollections.ipynb  dbuffcollections.yaml  ignoredDogma.yaml
data/patches/: capacitor.yaml  emergencyHullEnergizer.yaml  fighterActive.yaml  fighterPerSecond.yaml  mass.yaml  rechargeArmor.yaml  rechargeArmorRemote copy.yaml  rechargeHullRemote.yaml  rechargeShield.yaml  rechargeShieldRemote.yaml  remoteCapacitorTransmitter.yaml  upgrade.yaml  warpSpeed.yaml
src/: constant.rs  fit.rs  lib.rs  protobuf.rs
src/calculate/: item.rs  mod.rs  pass_1.rs  pass_2.rs  pass_3.rs  pass_4.rs  pass_5.rs  pass_6.rs
src/calculate/pass_3/: chargeable_armor_repairer.rs
src/calculate/pass_4/: capacitor.rs
src/calculate/pass_5/: capacitor.rs  chargeable_armor_repairer.rs
src/calculate/pass_6/: capacitor.rs
src/provider/: mod.rs
tests/: test_basic_fit.rs  test_booster.rs  test_cap.rs  test_colossus.rs  test_dyn.rs  test_emergency_hull_energizer.rs  test_fighter.rs  test_implant_asc.rs  test_implant_group.rs  test_remote.rs  test_warfare.rs
