[package]
name = "eve-fit-os"
version = "0.1.0"
edition = "2021"
include = [
    "src/**/*",
    "Cargo.toml",
    "Cargo.lock",
    "build.rs",
    "efos.proto",
]

[dependencies]
anyhow = "1.0.95"
prost = { version = "0.13.4", optional = true }
bitflags = "2.8.0"

[build-dependencies]
convert_case = "0.7.1"
dotenvy = "0.15.7"
prost-build = { version = "0.13.4", optional = true }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"

[dev-dependencies]
serde_json = "1.0.138"

[features]
default = ["protobuf"]
protobuf = ["dep:prost", "dep:prost-build"]
