[package]
name = "eve-fit-os"
version = "0.1.0"
edition = "2021"
include = ["src/**/*", "Cargo.toml", "Cargo.lock", "build.rs", "efos.proto"]

[dependencies]
anyhow = "1.0.102"
prost = { version = "0.14.3", optional = true }
bitflags = "2.11.0"

[build-dependencies]
convert_case = "0.11.0"
dotenvy = "0.15.7"
prost-build = { version = "0.14.3", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
serde_json = "1.0.149"

[features]
default = ["protobuf"]
protobuf = ["dep:prost", "dep:prost-build"]
